# core

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/ISSUE_TEMPLATE/: format-request.md
.github/workflows/: ci.yml  format.yml  tests.yml
src/: archive.rs  file.rs  format.rs  formats.rs  helpers.rs  lib.rs  types.rs
src/archive/: extract.rs
src/format/: zip.rs
src/formats/: auto.rs  hssp.rs  rar.rs  zip.rs
src/formats/hssp/: parser.rs  writer.rs
src/formats/rar/: parser.rs
src/formats/zip/: parser.rs  writer.rs
src/helpers/: datetime.rs  encryption.rs  hash.rs
src/helpers/datetime/: filetime.rs  msdos.rs
src/helpers/encryption/: aes256cbc.rs
src/helpers/hash/: crc32.rs  murmur3.rs  sha256.rs
tests/: extract.rs  hssp.rs  other.rs  rar-external.rs  rar.rs  zip-external.rs  zip.rs
tests/samples/: 000.msbt  000.umsbt  README.md
tests/samples/hssp/: 000.hssp  001.hssp  002.hssp  003.hssp  004.hssp  005.hssp  006.hssp  007.hssp  008.hssp  009.hssp  010.hssp  011.hssp  012.hssp  013.hssp  014.hssp  015.hssp  016.hssp  017.hssp
