[package]
name = 'acridotheres'
version = '0.4.0'
edition = '2021'
description = "Acridotheres Core Library"
license = "MIT"
repository = "https://github.com/acridotheres/core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acr = "0.3.2"
chrono = "0.4.38"
crc32fast = "1.4.2"
dh = "0.8.0"
neozip = "0.3.1"