[package]
name = 'nyvo'
version = '0.8.0'
edition = '2024'
description = "Nyvo Core"
license = "MIT"
repository = "https://github.com/nyvo-labs/core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
dh = "0.9.0"
zip = "4.3.0"
